--- a/horn/package.json
+++ b/horn/package.json
@@ -23,7 +23,9 @@
     "build": "node build/build.js wx"
   },
   "dependencies": {
-    "mpvue": "^2.0.0"
+    "mpvue": "^2.0.0",
+    "mpvue-cropper": "^0.2.2",
+    "we-cropper": "^1.3.7"
   },
   "devDependencies": {
     "babel-core": "^6.22.1",
@@ -45,9 +47,6 @@
     "glob": "^7.1.2",
     "html-webpack-plugin": "^3.2.0",
     "http-proxy-middleware": "^0.18.0",
-    "koa": "^2.7.0",
-    "koa-bodyparser": "^4.2.1",
-    "koa-router": "^7.4.0",
     "mkdirp": "^0.5.1",
     "mpvue-loader": "^2.0.0",
     "mpvue-template-compiler": "^2.0.0",
