--- a/horn/package.json
+++ b/horn/package.json
@@ -24,8 +24,7 @@
   },
   "dependencies": {
     "mpvue": "^2.0.0",
-    "mpvue-cropper": "^0.2.2",
-    "we-cropper": "^1.3.7"
+    "mpvue-cropper": "^0.2.2"
   },
   "devDependencies": {
     "babel-core": "^6.22.1",
