--- a/horn/project.config.json
+++ b/horn/project.config.json
@@ -18,7 +18,7 @@
 	},
 	"miniprogramRoot": "dist/wx/",
 	"compileType": "miniprogram",
-	"appid": "wx2ca9e25aa9b4246a",
+	"appid": "wxa8ede13ee8234781",
 	"projectname": "horn",
 	"simulatorType": "wechat",
 	"simulatorPluginLibVersion": {},
@@ -31,13 +31,25 @@
 			"current": -1,
 			"list": []
 		},
+		"plugin": {
+			"current": -1,
+			"list": []
+		},
 		"game": {
 			"currentL": -1,
 			"list": []
 		},
 		"miniprogram": {
-			"current": -1,
-			"list": []
+			"current": 0,
+			"list": [
+				{
+					"id": 0,
+					"name": "条件编译",
+					"pathName": "pages/index/main",
+					"query": "scene=repoId=1",
+					"scene": 1048
+				}
+			]
 		}
 	}
 }
